--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -31,6 +31,10 @@
       margin-top: 16px;
       color: #f8f8f8;
     }
+
+    @media screen and (max-width: 500px) {
+      display: none;
+    }
   }
 
   main {
