--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -22,6 +22,16 @@
           height: 40px;
         }
       }
+
+      @media screen and (max-width: 500px) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        >img {
+          display: none;
+        }
+      }
     }
   }
 
@@ -108,6 +118,10 @@
 
     .question-list {
       margin-top: 32px;
+    }
+
+    @media screen and (max-width: 500px) {
+      padding: 0 6px;
     }
   }
 }
